--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<% if user_signed_in? %>
+  <%= "#{current_user.nickname}がログインしています" %>
+  <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+<% else %>
+  <%= link_to '新規登録', new_user_registration_path %>
+  <%= link_to 'ログイン', new_user_session_path %>
+<% end %>
