--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,7 @@
 <% if user_signed_in? %>
   <%= "#{current_user.nickname}がログインしています" %>
   <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+  <%= link_to '新規投稿', new_article_path %>
 <% else %>
   <%= link_to '新規登録', new_user_registration_path %>
   <%= link_to 'ログイン', new_user_session_path %>
