記事詳細表示機能

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,10 @@
 <p>新着記事一覧</p>
 <% @articles.each do | article | %>
 <ul>
-  <li><%= article.title %></li><span><%= "by #{article.user.nickname}" %></span>
+  <li>
+    <%= link_to "#{article.title}", article_path(article.id) %>
+    <span><%= "by #{article.user.nickname}" %></span>
+  </li>
 </ul>
 <% end %>
 </div>
