--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 <p><%= @article.content %></p>
 <p><%= "by #{@article.user.nickname}" %></p>
 <% if user_signed_in? && current_user.id == @article.user.id %>
-<%= link_to '編集', root_path %>
+<%= link_to '編集', edit_article_path(@article.id) %>
 <%= link_to '削除', root_path %>
 <% end %>
 <%= link_to '戻る', root_path %>
